# battletech-api

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
api/src/: battlemech_handler.rs  lib.rs
application/: Cargo.toml
application/src/: lib.rs
application/src/battlemech/: create.rs  delete.rs  read.rs  update.rs
domain/: Cargo.toml
domain/src/: battlemech_model.rs  component_model.rs  lib.rs  mongodb_repo.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
shared/src/: response_models.rs
src/: main.rs
src/api/: battlemech_api.rs  mod.rs
src/models/: battlemech_model.rs  component_model.rs  mod.rs
src/repository/: mongodb_repo.rs
