[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

serde_json = "1.0.88"
rocket = { version = "0.5.0-rc.2", features = ["json"] }

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 